Fix TOC on mobile

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -552,9 +552,13 @@ div.post-contributor {
 }
 
 #toc {
+  position: relative;
   background-color: #EEE;
-  margin: 20px 100px 0px 100px;
-  padding: 5px 30px;
+  width: 60%;
+  max-width: 400px;
+  left: 10%;
+  margin-top: 10px;
+  padding: 10px 30px 10px 20px;
   border: 1px solid #E8E8E8;
   border-radius: 3px;
 }
@@ -572,8 +576,10 @@ div.post-contributor {
   }
   li ul {
     margin: 0;
+    padding-left: 20px;
   }
-  margin: 0 0 10px 0;
+  margin: 0 0 0px 0;
+  padding-left: 10px;
 }
 
 .post-content h2:nth-of-type(1){
